agregando link contact a plantilla.html

--- a/plantilla.html
+++ b/plantilla.html
@@ -40,7 +40,7 @@ and open the template in the editor.
                 <li> <a href="#">English films</a></li>
                 <li> <a href="#">Synonyms</a></li>
                 <li> <a href="#"> Tips</a></li>
-                <li> <a href="#">Contactanos</a></li>
+                <li> <a href="plantilla.html">Contactanos</a></li>
             </ul>
         </nav>
 
