agregamos seccion smalltalks,pusimo su ppal css en paginacion.css

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ So, what if you had the power of anticipate yourself at future having all the in
                   </article>
                   
             <aside id="right">
-              <h3><a href="Sections/talkingabout.html">Talking about</a> </h3>  
+              <h3><a href="talkingabout.html">Talking about</a> </h3>  
                  <h3>Good health helps</h3> 
                 <h3>Verbs as per topic</h3>
                   <h3>Tips for studying</h3>
