solo little details

--- a/Sections/smalltalks.html
+++ b/Sections/smalltalks.html
@@ -43,13 +43,13 @@ and open the template in the editor.
                 <li> <a href="#">English films</a></li>
                 <li> <a href="#">Synonyms</a></li>
                 <li> <a href="#">Pronuciation Tips</a></li>
-                <li> <a href="#">Phrasal Verbs</a></li>
+                <li> <a href="../plantilla.html">Contacto</a></li>
             </ul>
         </nav>
 
         <header>
             <section id="banner"> 
-            <h1 title="&#9733;"><a href="../plantillaESTR3_1.html">Fluent English by Luisano</a></h1>
+                <h1 title="&#9733;"><a href="../index.html">Fluent English by Luisano</a></h1>
             <h2>Because this day would come and union makes strength. Join us!</h2>
             <h3>All the best and most useful English information joined and combined in one site along with amazing sections related to music, videos and books which help you progress remarkably.</h3>
              </section>
