--- a/plantilla.html
+++ b/plantilla.html
@@ -70,7 +70,8 @@ input[type="submit"]:hover{
     cursor: pointer;
 }
 /**/
-
+ .cont-link{margin-top: 25px; width: 140px;height: 120px;}
+ .links{width: 100%; height: 50%; border-radius: 10px; cursor: pointer; }
         </style>
 
     </head>
