nuevo form log-in VALIDADO con JQuery+plugin

--- a/expressions.html
+++ b/expressions.html
@@ -9,6 +9,12 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <script src="../JQuery/jquery-3.2.1.min.js"></script>
+<!--plugin nuevo, osea nuevas funciones 63 -->
+<script src="../js/validationQ.js"></script>
+
+   
     </head>
     <body>
         <div>Agregando esto a github</div>
