--- a/plantilla.html
+++ b/plantilla.html
@@ -260,7 +260,7 @@ input[type="submit"]:hover{
     </tr>
     <tr>
       <td>Edad:</td>
-      <td><input name="edad" type="edad" id="edad" size="4" ></td>
+      <td><input  type="text" name="edad" id="edad" size="4" ></td>
     </tr>
      <tr>
       <td>Email:</td>
